Bug 455385 - Firewall KCM crashes in NetstatHelper::parseSSOutput() when trying to view connections
Summary: Firewall KCM crashes in NetstatHelper::parseSSOutput() when trying to view co...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_firewall (other bugs)
Version First Reported In: 5.26.5
Platform: Arch Linux Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 469984 478407 493408 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-06-16 08:01 UTC by Robin
Modified: 2025-02-08 03:15 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments
screen grab of crashy firewall app (114.83 KB, image/png)
2022-06-16 08:01 UTC, Robin
Details
New crash information added by DrKonqi (2.50 KB, text/plain)
2022-07-22 09:10 UTC, Vlad
Details
New crash information added by DrKonqi (2.49 KB, text/plain)
2022-08-29 23:34 UTC, Rafael
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robin 2022-06-16 08:01:21 UTC
Created attachment 149776 [details]
screen grab of crashy firewall app

SUMMARY
System Settings > Firewall app crashes when trying to view connections (backtrace included in ADDITIONAL INFORMATION section)


STEPS TO REPRODUCE
1. open System Settings app
2. select Firewall from the list
3. click the "View Connections" button (bottom left)

OBSERVED RESULT
A crash report notification appears immediately, then the settings app closes shortly after

EXPECTED RESULT
No idea, first time I've tried to use it. Default incoming policy is set to "reject", so I guess I would be shown an empty list of some kind?

SOFTWARE/OS VERSIONS
Windows: 11 (dual boot, problem experienced in Kubuntu)
macOS: 
Linux/KDE Plasma: 5.15.0-39-generic #42-Ubuntu SMP Thu Jun 9 23:42:32 UTC 2022 x86_64 x86_64 x86_64 GNU/Linux
(available in About System)
KDE Plasma Version: 5.24.4
KDE Frameworks Version: 5.92.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION

Application: System Settings (systemsettings), signal: Segmentation fault

[KCrash Handler]
#4  0x00007f50946c24df in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f50946c2702 in QString::split(QChar, QFlags<Qt::SplitBehaviorFlags>, Qt::CaseSensitivity) const () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f501b0fb104 in ?? () from /usr/lib/x86_64-linux-gnu/qt5/plugins/plasma/kcms/systemsettings/kcm_firewall.so
#7  0x00007f5094855783 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007f5094786cbc in QProcess::finished(int, QProcess::ExitStatus) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#9  0x00007f509478c7d3 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#10 0x00007f509478c90e in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#11 0x00007f50948557b8 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#12 0x00007f5094858ca3 in QSocketNotifier::activated(QSocketDescriptor, QSocketNotifier::Type, QSocketNotifier::QPrivateSignal) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#13 0x00007f50948594d3 in QSocketNotifier::event(QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#14 0x00007f5095426713 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#15 0x00007f509481de2a in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#16 0x00007f5094877cb5 in ?? () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#17 0x00007f5092407d1b in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#18 0x00007f509245c6f8 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#19 0x00007f50924053c3 in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#20 0x00007f50948770a8 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#21 0x00007f509481c74b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#22 0x00007f5094824ce4 in QCoreApplication::exec() () from /lib/x86_64-linux-gnu/libQt5Core.so.5
#23 0x000056303b9921bf in ?? ()
#24 0x00007f5094137d90 in __libc_start_call_main (main=main@entry=0x56303b9916b0, argc=argc@entry=3, argv=argv@entry=0x7ffdfc8258e8) at ../sysdeps/nptl/libc_start_call_main.h:58
#25 0x00007f5094137e40 in __libc_start_main_impl (main=0x56303b9916b0, argc=3, argv=0x7ffdfc8258e8, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffdfc8258d8) at ../csu/libc-start.c:392
#26 0x000056303b992af5 in ?? ()
[Inferior 1 (process 2444) detached]
Comment 1 Nate Graham 2022-06-16 19:48:27 UTC
Thank you for the bug report! Unfortunately the backtrace is incomplete and missing debug symbols for the following lines that we need to figure out exactly what's going wrong:

#6  0x00007f501b0fb104 in ?? () from /usr/lib/x86_64-linux-gnu/qt5/plugins/plasma/kcms/systemsettings/kcm_firewall.so

Could you please install debug symbols for plasma-firewall, reproduce the crash, and attach a new symbolicated backtrace? See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports

Thanks again!
Comment 2 Bug Janitor Service 2022-07-01 04:37:10 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 3 Robin 2022-07-08 11:16:57 UTC
Hi - I've just tried to reproduce the problem, but it seems to be working now!

Version info:
Linux rksd1 5.15.0-40-generic #43-Ubuntu SMP Wed Jun 15 12:54:21 UTC 2022 x86_64 x86_64 x86_64 GNU/Linux
Operating System: Kubuntu 22.04
KDE Plasma Version: 5.24.4
KDE Frameworks Version: 5.92.0
Qt Version: 5.15.3
Kernel Version: 5.15.0-40-generic (64-bit)
Graphics Platform: X11
Processors: 20 × 12th Gen Intel® Core™ i9-12900HK
Memory: 31.0 GiB of RAM
Graphics Processor: Mesa Intel® Graphics
Comment 4 Vlad 2022-07-22 09:10:57 UTC
Created attachment 150811 [details]
New crash information added by DrKonqi

systemsettings (5.25.3) using Qt 5.15.5

Same here on kde 5.25.3. Before ufw activation it worked, after firewall service activation connection list crashed

-- Backtrace (Reduced):
#5  0x00007f8b4e7a30d1 in QString::split(QChar, QFlags<Qt::SplitBehaviorFlags>, Qt::CaseSensitivity) const () at /usr/lib/libQt5Core.so.5
[...]
#8  0x00007f8b4e85a08d in QProcess::finished(int, QProcess::ExitStatus) () at /usr/lib/libQt5Core.so.5
[...]
#12 0x00007f8b4e901054 in QSocketNotifier::activated(QSocketDescriptor, QSocketNotifier::Type, QSocketNotifier::QPrivateSignal) () at /usr/lib/libQt5Core.so.5
#13 0x00007f8b4e901198 in QSocketNotifier::event(QEvent*) () at /usr/lib/libQt5Core.so.5
#14 0x00007f8b4f455b3c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
Comment 5 Bug Janitor Service 2022-08-06 04:35:29 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 6 Bug Janitor Service 2022-08-21 04:35:32 UTC
This bug has been in NEEDSINFO status with no change for at least
30 days. The bug is now closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

Thank you for helping us make KDE software even better for everyone!
Comment 7 Rafael 2022-08-29 23:34:19 UTC
Created attachment 151696 [details]
New crash information added by DrKonqi

systemsettings (5.25.4) using Qt 5.15.5

Recently installed ufw. Opened settings and enabled the firewall without changing any defaults. Then clicked on 'View Connections'. It searched long enough to show the gear icon spining before crashing.

-- Backtrace (Reduced):
#5  0x00007fa2dfcee101 in QString::split(QChar, QFlags<Qt::SplitBehaviorFlags>, Qt::CaseSensitivity) const () at /usr/lib/libQt5Core.so.5
[...]
#8  0x00007fa2dfda50bd in QProcess::finished(int, QProcess::ExitStatus) () at /usr/lib/libQt5Core.so.5
[...]
#12 0x00007fa2dfe4cf84 in QSocketNotifier::activated(QSocketDescriptor, QSocketNotifier::Type, QSocketNotifier::QPrivateSignal) () at /usr/lib/libQt5Core.so.5
#13 0x00007fa2dfe4d0c8 in QSocketNotifier::event(QEvent*) () at /usr/lib/libQt5Core.so.5
#14 0x00007fa2e09b5b3c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /usr/lib/libQt5Widgets.so.5
Comment 8 Dashon 2023-02-15 02:56:33 UTC
Hey, I'm reopening this issue because I seem to be having the same problem on Arch. 
I have seen a few of these issues, but every time someone asks for a backtrace with debugging symbols from the user. The user never responds. I have recreated the crash and triggered a backtrace using gdb and I have the debugging symbols that were automatically downloaded by debuginfod. Let me know if there is anything else I can do to help fix this issue once and for all.

System Information:
Operating System: EndeavourOS
KDE Plasma Version: 5.26.5
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Kernel Version: 6.1.11-zen1-1-zen (64-bit)
Graphics Platform: X11
Processors: 16 × AMD Ryzen 7 5800X 8-Core Processor
Memory: 62.7 GiB of RAM
Graphics Processor: NVIDIA GeForce RTX 3080/PCIe/SSE2
Manufacturer: Micro-Star International Co., Ltd.
Product Name: MS-7C95
System Version: 1.0
 
Back Trace:
Thread 1 "systemsettings5" received signal SIGSEGV, Segmentation fault.
0x00007ffff676dbe7 in ?? () from /usr/lib/libQt5Core.so.5
(gdb) backtrace
#0  0x00007ffff676dbe7 in ?? () from /usr/lib/libQt5Core.so.5
#1  0x00007ffff6760f81 in QString::split(QChar, QFlags<Qt::SplitBehaviorFlags>, Qt::CaseSensitivity) const () from /usr/lib/libQt5Core.so.5
#2  0x00007fffe82e3472 in NetstatHelper::parseSSOutput (netstatOutput=..., this=0x55555b245330)
at /usr/src/debug/plasma-firewall/plasma-firewall-5.26.5/kcm/backends/netstat/netstathelper.cpp:151
#3  NetstatHelper::stepExecuteFinished (this=0x55555b245330, exitCode=<optimized out>)
at /usr/src/debug/plasma-firewall/plasma-firewall-5.26.5/kcm/backends/netstat/netstathelper.cpp:86
#4  0x00007ffff68bea71 in ?? () from /usr/lib/libQt5Core.so.5
#5  0x00007ffff68185fd in QProcess::finished(int, QProcess::ExitStatus) () from /usr/lib/libQt5Core.so.5
#6  0x00007ffff6814e02 in ?? () from /usr/lib/libQt5Core.so.5
#7  0x00007ffff6818e8e in ?? () from /usr/lib/libQt5Core.so.5
#8  0x00007ffff68bec20 in ?? () from /usr/lib/libQt5Core.so.5
#9  0x00007ffff68c0924 in QSocketNotifier::activated(QSocketDescriptor, QSocketNotifier::Type, QSocketNotifier::QPrivateSignal) ()
from /usr/lib/libQt5Core.so.5
#10 0x00007ffff68c0a68 in QSocketNotifier::event(QEvent*) () from /usr/lib/libQt5Core.so.5
#11 0x00007ffff7578b5c in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x55555660f9c0, e=0x7fffffffdd10)
at kernel/qapplication.cpp:3640
#12 0x00007ffff688df48 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/libQt5Core.so.5
#13 0x00007ffff68d7ac6 in ?? () from /usr/lib/libQt5Core.so.5
#14 0x00007ffff4f1682b in g_main_dispatch (context=0x7fffec005010) at ../glib/glib/gmain.c:3454
--Type <RET> for more, q to quit, c to continue without paging--
#15 g_main_context_dispatch (context=0x7fffec005010) at ../glib/glib/gmain.c:4172
#16 0x00007ffff4f6dcc9 in g_main_context_iterate.constprop.0 (context=0x7fffec005010, block=1, dispatch=1, self=<optimized out>)
at ../glib/glib/gmain.c:4248
#17 0x00007ffff4f150e2 in g_main_context_iteration (context=0x7fffec005010, may_block=1) at ../glib/glib/gmain.c:4313
#18 0x00007ffff68d8c6c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#19 0x00007ffff68866ec in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQt5Core.so.5
#20 0x00007ffff6891219 in QCoreApplication::exec() () from /usr/lib/libQt5Core.so.5
#21 0x00007ffff6d39fe2 in QGuiApplication::exec () at kernel/qguiapplication.cpp:1870
#22 0x00007ffff7576f2a in QApplication::exec () at kernel/qapplication.cpp:2832
#23 0x0000555555560c03 in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/systemsettings/systemsettings-5.26.5/app/main.cpp:188
Comment 9 Dashon 2023-02-15 03:04:27 UTC
I ran the backtrace one more time, because I saw some question marks in the last one and I want to attach this one too since this one doesn't seem to have any of the question marks:

Thread 1 "systemsettings5" received signal SIGSEGV, Segmentation fault.
QtPrivate::qustrchr (str=..., c=61) at /usr/lib/gcc/x86_64-pc-linux-gnu/12.2.1/include/emmintrin.h:1433
1433      return __builtin_ia32_pmovmskb128 ((__v16qi)__A);
(gdb) backtrace
#0  QtPrivate::qustrchr (str=..., c=61) at /usr/lib/gcc/x86_64-pc-linux-gnu/12.2.1/include/emmintrin.h:1433
#1  0x00007ffff676d883 in qFindChar (cs=(unknown: 0xf6759ac0), from=<optimized out>, ch=..., str=...)
at ../../include/QtCore/../../src/corelib/text/qstringview.h:162
#2  QtPrivate::findString (haystack0=..., from=<optimized out>, needle0=..., cs=cs@entry=Qt::CaseSensitive) at text/qstring.cpp:12203
#3  0x00007ffff676dc10 in (anonymous namespace)::splitString<QStringList, QString> (source=..., sep=0x7fffffffd86e, behavior=...,
cs=Qt::CaseSensitive, separatorSize=1) at ../../include/QtCore/../../src/corelib/text/qstringview.h:162
#4  0x00007ffff6760f81 in QString::split (this=<optimized out>, sep=..., behavior=..., behavior@entry=..., cs=cs@entry=Qt::CaseSensitive)
at text/qstring.cpp:7929
#5  0x00007fffe8348472 in NetstatHelper::parseSSOutput (netstatOutput=..., this=0x555559ef20b0)
at /usr/src/debug/plasma-firewall/plasma-firewall-5.26.5/kcm/backends/netstat/netstathelper.cpp:151
#6  NetstatHelper::stepExecuteFinished (this=0x555559ef20b0, exitCode=<optimized out>)
at /usr/src/debug/plasma-firewall/plasma-firewall-5.26.5/kcm/backends/netstat/netstathelper.cpp:86
#7  0x00007ffff68bea71 in QtPrivate::QSlotObjectBase::call (a=<optimized out>, r=<optimized out>, this=<optimized out>, this=<optimized out>,
r=<optimized out>, a=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#8  doActivate<false> (sender=0x555556ba5340, signal_index=11, argv=0x7fffffffda70) at kernel/qobject.cpp:3923
#9  0x00007ffff68185fd in QProcess::finished (this=<optimized out>, _t1=<optimized out>, _t2=<optimized out>) at .moc/moc_qprocess.cpp:339
#10 0x00007ffff6814e02 in QProcessPrivate::_q_processDied (this=0x555558564090) at io/qprocess.cpp:1184
#11 0x00007ffff6818e8e in QProcess::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=0x7fffffffdbf0)
at io/qprocess.h:320
--Type <RET> for more, q to quit, c to continue without paging--
#12 0x00007ffff68bec20 in doActivate<false> (sender=0x55555b0dbd40, signal_index=3, argv=0x7fffffffdbf0) at kernel/qobject.cpp:3935
#13 0x00007ffff68c0924 in QSocketNotifier::activated (this=this@entry=0x55555b0dbd40, _t1=..., _t2=<optimized out>, _t3=...)
at .moc/moc_qsocketnotifier.cpp:178
#14 0x00007ffff68c0a68 in QSocketNotifier::event (this=0x55555b0dbd40, e=<optimized out>) at kernel/qsocketnotifier.cpp:302
#15 0x00007ffff7578b5c in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x55555b0dbd40, e=0x7fffffffdd10)
at kernel/qapplication.cpp:3640
#16 0x00007ffff688df48 in QCoreApplication::notifyInternal2 (receiver=0x55555b0dbd40, event=0x7fffffffdd10) at kernel/qcoreapplication.cpp:1064
#17 0x00007ffff68d7ac6 in socketNotifierSourceDispatch (source=0x555555672970) at kernel/qeventdispatcher_glib.cpp:107
#18 0x00007ffff4f1682b in g_main_dispatch (context=0x7fffec005010) at ../glib/glib/gmain.c:3454
#19 g_main_context_dispatch (context=0x7fffec005010) at ../glib/glib/gmain.c:4172
#20 0x00007ffff4f6dcc9 in g_main_context_iterate.constprop.0 (context=0x7fffec005010, block=1, dispatch=1, self=<optimized out>)
at ../glib/glib/gmain.c:4248
#21 0x00007ffff4f150e2 in g_main_context_iteration (context=0x7fffec005010, may_block=1) at ../glib/glib/gmain.c:4313
#22 0x00007ffff68d8c6c in QEventDispatcherGlib::processEvents (this=0x555555676ea0, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#23 0x00007ffff68866ec in QEventLoop::exec (this=0x7fffffffdf90, flags=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#24 0x00007ffff6891219 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#25 0x00007ffff6d39fe2 in QGuiApplication::exec () at kernel/qguiapplication.cpp:1870
#26 0x00007ffff7576f2a in QApplication::exec () at kernel/qapplication.cpp:2832
#27 0x0000555555560c03 in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/systemsettings/systemsettings-5.26.5/app/main.cpp:188
Comment 10 jl1223 2023-12-03 17:28:25 UTC
Hello,

I have the same crash but I noticed that the crash did not happen when I was *NOT* using any VPN connections (either Mullvad - wireguard - or connecting to work VPN via custom OpenVPN settings).

uname -a
... 6.5.0-13-generic #13-Ubuntu SMP PREEMPT_DYNAMIC Fri Nov 3 12:16:05 UTC 2023 x86_64 x86_64 x86_64 GNU/Linux

About this system:
Operating System: Kubuntu 23.10
KDE Plasma Version: 5.27.8
KDE Frameworks Version: 5.110.0
Qt Version: 5.15.10
Kernel Version: 6.5.0-13-generic (64-bit)
Comment 11 jl1223 2023-12-03 17:29:30 UTC
(In reply to jl1223 from comment #10)
> Hello,
> 
> I have the same crash but I noticed that the crash did not happen when I was
> *NOT* using any VPN connections (either Mullvad - wireguard - or connecting
> to work VPN via custom OpenVPN settings).
> 
> uname -a
> ... 6.5.0-13-generic #13-Ubuntu SMP PREEMPT_DYNAMIC Fri Nov 3 12:16:05 UTC
> 2023 x86_64 x86_64 x86_64 GNU/Linux
> 
> About this system:
> Operating System: Kubuntu 23.10
> KDE Plasma Version: 5.27.8
> KDE Frameworks Version: 5.110.0
> Qt Version: 5.15.10
> Kernel Version: 6.5.0-13-generic (64-bit)

Sorry - forgot to cut/paste trace

[KCrash Handler]
#4  0x00007fef3415e39b in QtPrivate::qustrchr(QStringView, unsigned short) () at /lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007fef34169894 in QtPrivate::findString(QStringView, long long, QStringView, Qt::CaseSensitivity) () at /lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007fef3416db77 in ??? () at /lib/x86_64-linux-gnu/libQt5Core.so.5
#7  0x00007fef3416dd71 in QString::split(QChar, QFlags<Qt::SplitBehaviorFlags>, Qt::CaseSensitivity) const () at /lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007feef4dbbddc in ??? () at /usr/lib/x86_64-linux-gnu/qt5/plugins/plasma/kcms/systemsettings/kcm_firewall.so
#9  0x00007fef34306312 in ??? () at /lib/x86_64-linux-gnu/libQt5Core.so.5
#10 0x00007fef34233e8c in QProcess::finished(int, QProcess::ExitStatus) () at /lib/x86_64-linux-gnu/libQt5Core.so.5
#11 0x00007fef34239ae3 in ??? () at /lib/x86_64-linux-gnu/libQt5Core.so.5
#12 0x00007fef34239c1e in ??? () at /lib/x86_64-linux-gnu/libQt5Core.so.5
#13 0x00007fef3430602d in ??? () at /lib/x86_64-linux-gnu/libQt5Core.so.5
#14 0x00007fef343097c3 in QSocketNotifier::activated(QSocketDescriptor, QSocketNotifier::Type, QSocketNotifier::QPrivateSignal) () at /lib/x86_64-linux-gnu/libQt5Core.so.5
#15 0x00007fef3430a005 in QSocketNotifier::event(QEvent*) () at /lib/x86_64-linux-gnu/libQt5Core.so.5
#16 0x00007fef34f6bc82 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /lib/x86_64-linux-gnu/libQt5Widgets.so.5
#17 0x00007fef342cc7a8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /lib/x86_64-linux-gnu/libQt5Core.so.5
#18 0x00007fef34328955 in ??? () at /lib/x86_64-linux-gnu/libQt5Core.so.5
#19 0x00007fef32c5cb2c in ??? () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#20 0x00007fef32cb846f in ??? () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#21 0x00007fef32c5ad20 in g_main_context_iteration () at /lib/x86_64-linux-gnu/libglib-2.0.so.0
#22 0x00007fef34327daa in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib/x86_64-linux-gnu/libQt5Core.so.5
#23 0x00007fef342cb15b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib/x86_64-linux-gnu/libQt5Core.so.5
#24 0x00007fef342d3904 in QCoreApplication::exec() () at /lib/x86_64-linux-gnu/libQt5Core.so.5
#25 0x000055c4b4dea560 in ??? ()
#26 0x00007fef338280d0 in __libc_start_call_main (main=main@entry=0x55c4b4de9a50, argc=argc@entry=1, argv=argv@entry=0x7ffe7ef16438) at ../sysdeps/nptl/libc_start_call_main.h:58
#27 0x00007fef33828189 in __libc_start_main_impl (main=0x55c4b4de9a50, argc=1, argv=0x7ffe7ef16438, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffe7ef16428) at ../csu/libc-start.c:360
#28 0x000055c4b4deaeb5 in ??? ()
[Inferior 1 (process 17875) detached]
Comment 12 David Edmundson 2025-01-28 17:05:44 UTC
*** Bug 469984 has been marked as a duplicate of this bug. ***
Comment 13 Nate Graham 2025-01-28 17:13:29 UTC
*** Bug 493408 has been marked as a duplicate of this bug. ***
Comment 14 Nate Graham 2025-01-28 17:13:31 UTC
*** Bug 478407 has been marked as a duplicate of this bug. ***
Comment 15 David Edmundson 2025-02-05 14:49:20 UTC
Git commit 1bc5d70565fc8102919cc9848f30997b139c887d by David Edmundson.
Committed on 05/02/2025 at 14:49.
Pushed by davidedmundson into branch 'master'.

Fix potential crash parsing netstat output

M  +4    -0    kcm/backends/netstat/netstathelper.cpp

https://invent.kde.org/plasma/plasma-firewall/-/commit/1bc5d70565fc8102919cc9848f30997b139c887d
Comment 16 David Edmundson 2025-02-05 14:51:49 UTC
Git commit 95b2693f9082cc35b7fd8447b16e638a7abfb681 by David Edmundson, on behalf of David Edmundson.
Committed on 05/02/2025 at 14:49.
Pushed by davidedmundson into branch 'Plasma/6.3'.

Fix potential crash parsing netstat output


(cherry picked from commit 1bc5d70565fc8102919cc9848f30997b139c887d)

a79c5fe6 Fix potential crash parsing netstat output

Co-authored-by: David Edmundson <kde@davidedmundson.co.uk>

M  +4    -0    kcm/backends/netstat/netstathelper.cpp

https://invent.kde.org/plasma/plasma-firewall/-/commit/95b2693f9082cc35b7fd8447b16e638a7abfb681