Fix potential crash parsing netstat output

BUG: 455385